--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,10 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(test_nau7802)
 
-target_sources(app PRIVATE src/main.c)
+target_sources(app PRIVATE 
+                src/main.c
+                src/loadcell.c)
+
+zephyr_library_include_directories(.)
+
+include_directories(${CMAKE_SOURCE_DIR}/src)
