--- a/prj.conf
+++ b/prj.conf
@@ -19,4 +19,14 @@ CONFIG_LOG_BACKEND_UART=y
 CONFIG_SERIAL=y
 CONFIG_UART_CONSOLE=y
 
+# Config logger
+CONFIG_LOG=y
+
+CONFIG_NAU7802=y
+# # Interrut triggerred configurations
+CONFIG_NAU7802_TRIGGER_NONE=y
+CONFIG_NAU7802_TRIGGER_OWN_THREAD=y
+CONFIG_NAU7802_TRIGGER_GLOBAL_THREAD=y
+CONFIG_NAU7802_TRIGGER_DIRECT=y
+
 
