update source with loadcell

--- a/prj.conf
+++ b/prj.conf
@@ -22,6 +22,8 @@ CONFIG_UART_CONSOLE=y
 # Config logger
 CONFIG_LOG=y
 
+CONFIG_REQUIRES_FLOAT_PRINTF=y
+
 CONFIG_NAU7802=y
 # # Interrut triggerred configurations
 CONFIG_NAU7802_TRIGGER_NONE=y
