--- a/boards/ALETHA/ALETHA_V2/ALETHA_V2.dts
+++ b/boards/ALETHA/ALETHA_V2/ALETHA_V2.dts
@@ -10,7 +10,38 @@
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
 		zephyr,code-partition = &slot0_partition;
+		zephyr,console =  &uart0 ;
+		zephyr,shell-uart =  &uart0 ;
+		zephyr,uart-mcumgr = &uart0;
 	};
+
+	leds {
+		compatible = "gpio-leds";
+		led0: led_0 {
+			gpios = <&gpio0 13 GPIO_ACTIVE_LOW>;
+			label = "Green LED 0";
+		};
+		led1: led_1 {
+			gpios = <&gpio0 14 GPIO_ACTIVE_LOW>;
+			label = "Green LED 1";
+		};
+		led2: led_2 {
+			gpios = <&gpio0 15 GPIO_ACTIVE_LOW>;
+			label = "Green LED 2";
+		};
+		led3: led_3 {
+			gpios = <&gpio0 16 GPIO_ACTIVE_LOW>;
+			label = "Green LED 3";
+		};
+	};
+	
+	aliases {
+		led0 = &led0;
+		led1 = &led1;
+		led2 = &led2;
+		led3 = &led3;
+	};		
+
 };
 
 &flash0 {
@@ -39,4 +70,41 @@
 			reg = <0x0007a000 DT_SIZE_K(24)>;
 		};
 	};
+};
+
+&gpiote {
+	status = "okay";
+};
+
+&gpio0 {
+	status = "okay";
+};
+
+&gpio1 {
+	status = "okay";
+};
+
+&uart0 {
+	compatible = "nordic,nrf-uarte";
+	status = "okay";
+	current-speed = <115200>;
+	pinctrl-0 = <&uart0_default>;
+	pinctrl-1 = <&uart0_sleep>;
+	pinctrl-names = "default", "sleep";
+};
+
+&i2c0 {
+	compatible = "nordic,nrf-twi";
+	status = "okay";
+	pinctrl-0 = <&i2c0_default>;
+	pinctrl-1 = <&i2c0_sleep>;
+	pinctrl-names = "default", "sleep";
+	
+	nau7802: nau7802@2a {
+        compatible = "nuvoton,nau7802";
+        reg = <0x2a>;
+        drdy-gpios = <&gpio0 28 GPIO_ACTIVE_HIGH>;
+        conversions-per-second = <80>; //SPS (Tốc độ lấy mẫu ADC: 320 mẫu / giây (320 SPS))
+        gain = <128>;
+    };
 };
