--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.20.0)
 
-list(APPEND ZEPHYR_EXTRA_MODULES "${CMAKE_CURRENT_SOURCE_DIR}/drivers")
+# list(APPEND ZEPHYR_EXTRA_MODULES "${CMAKE_CURRENT_SOURCE_DIR}/drivers")
+set(ZEPHYR_EXTRA_MODULES "${CMAKE_SOURCE_DIR}/modules/NAU7802")
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
