feat: sensors_read_weight() calibration for weight

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "nau7802.h": "c",
-        "log.h": "c"
+        "log.h": "c",
+        "kernel.h": "c",
+        "sensor.h": "c"
     }
 }
