--- a/prj.conf
+++ b/prj.conf
@@ -23,6 +23,7 @@ CONFIG_UART_CONSOLE=y
 CONFIG_LOG=y
 
 CONFIG_REQUIRES_FLOAT_PRINTF=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
 
 CONFIG_NAU7802=y
 # # Interrut triggerred configurations
